<?xml version='1.0'?>
<!--
Licensed to the Apache Software Foundation (ASF) under one
or more contributor license agreements.  See the NOTICE file
distributed with this work for additional information
regarding copyright ownership.  The ASF licenses this file
to you under the Apache License, Version 2.0 (the
"License"); you may not use this file except in compliance
with the License.  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing,
software distributed under the License is distributed on an
"AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
KIND, either express or implied.  See the License for the
specific language governing permissions and limitations
under the License.
-->

<resources>
    <string name="app_name">TVM RPC</string>
    <string name="rpc_name">RPC</string>

    <string name="input_address">Enter the tracker server address</string>
    <string name="input_port">Enter the tracker server port</string>
    <string name="input_key">Enter the app connection key</string>

    <string name="label_address">Address</string>
    <string name="label_port">Port</string>
    <string name="label_key">Key</string>
    <string name="label_persistent">Enable RPC</string>

    <string name="label_address_hint">192.168.1.1</string>
    <string name="label_port_hint">9190</string>
    <string name="label_key_hint">android</string>


    <string name="switch_on">Enabled</string>
    <string name="switch_off">Disabled</string>

    <string name="stop_rpc">Stop RPC</string>
</resources>
